--- a/.github/workflows/check1updater.yml
+++ b/.github/workflows/check1updater.yml
@@ -1,59 +1,59 @@
-name: check1updater
-run-name: ${{ github.head_ref || github.ref_name }}-${{ github.run_number }} 
-on:
-  workflow_dispatch:
-    inputs:
-      commit_sha:
-        description: Check status of commit sha to be updated
-        required: true
-        type: string
-      updated_status:
-        description: The status to updte to
-        required: true
-        type: string
-      tag_name:
-        description: tag name
-        required: true
-        type: string
-jobs: 
-  check1:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Generate token
-        id: generate_token
-        uses: tibdex/github-app-token@v1.8.0
-        with:
-          app_id: ${{ secrets.CLEVERTAP_PLATFORM_BOT_ID }}
-          private_key: ${{ secrets.CLEVERTAP_PLATFORM_BOT_PRIVATE_ACCESS_KEY }}
-      - name: Create Check1 status
-        run: |
-          echo ${{ steps.generate_token.outputs.token }} 
-          curl -L \
-          -X POST \
-          -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" \
-          -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/check-runs \
-          -d "{\"name\":\"check1\",\"head_sha\":\"${{ inputs.commit_sha }}\",\"status\":\"completed\",\"conclusion\":\"${{ inputs.updated_status }}\"}"
-      - name: Checkout repo
-        uses: actions/checkout@v4
-        with: 
-          path: cloudformation
-          token: ${{ steps.generate_token.outputs.token }}
-      - name: Push Tags
-        run: |
-          cd cloudformation
-          git config --global user.email "yashdeep@clevertap.com"
-          git config --global user.name "Yashdeep Shetty"
+# name: check1updater
+# run-name: ${{ github.head_ref || github.ref_name }}-${{ github.run_number }} 
+# on:
+#   workflow_dispatch:
+#     inputs:
+#       commit_sha:
+#         description: Check status of commit sha to be updated
+#         required: true
+#         type: string
+#       updated_status:
+#         description: The status to updte to
+#         required: true
+#         type: string
+#       tag_name:
+#         description: tag name
+#         required: true
+#         type: string
+# jobs: 
+#   check1:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Generate token
+#         id: generate_token
+#         uses: tibdex/github-app-token@v1.8.0
+#         with:
+#           app_id: ${{ secrets.CLEVERTAP_PLATFORM_BOT_ID }}
+#           private_key: ${{ secrets.CLEVERTAP_PLATFORM_BOT_PRIVATE_ACCESS_KEY }}
+#       - name: Create Check1 status
+#         run: |
+#           echo ${{ steps.generate_token.outputs.token }} 
+#           curl -L \
+#           -X POST \
+#           -H "Accept: application/vnd.github+json" \
+#           -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" \
+#           -H "X-GitHub-Api-Version: 2022-11-28" \
+#           https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/check-runs \
+#           -d "{\"name\":\"check1\",\"head_sha\":\"${{ inputs.commit_sha }}\",\"status\":\"completed\",\"conclusion\":\"${{ inputs.updated_status }}\"}"
+#       - name: Checkout repo
+#         uses: actions/checkout@v4
+#         with: 
+#           path: cloudformation
+#           token: ${{ steps.generate_token.outputs.token }}
+#       - name: Push Tags
+#         run: |
+#           cd cloudformation
+#           git config --global user.email "yashdeep@clevertap.com"
+#           git config --global user.name "Yashdeep Shetty"
           
-          branch=${{ github.head_ref || github.ref_name }}
-          git checkout $branch
+#           branch=${{ github.head_ref || github.ref_name }}
+#           git checkout $branch
 
-          git log --oneline
-          echo "Branch: $branch"
-          echo "Commit SHA: ${{ inputs.commit_sha }}"
-          echo "Tag Name: ${{ inputs.tag_name }}"
+#           git log --oneline
+#           echo "Branch: $branch"
+#           echo "Commit SHA: ${{ inputs.commit_sha }}"
+#           echo "Tag Name: ${{ inputs.tag_name }}"
           
-          git checkout $branch
-          git tag -m "${{ inputs.updated_status }}" "${{ inputs.tag_name }}" "${{ inputs.commit_sha }}"
-          git push origin "${{ inputs.tag_name }}"
+#           git checkout $branch
+#           git tag -m "${{ inputs.updated_status }}" "${{ inputs.tag_name }}" "${{ inputs.commit_sha }}"
+#           git push origin "${{ inputs.tag_name }}"
