--- a/.github/workflows/check2updater.yml
+++ b/.github/workflows/check2updater.yml
@@ -1,28 +1,28 @@
-name: check2updater
-run-name: ${{ github.head_ref || github.ref_name }}-${{ github.run_number }} 
-on:
-  workflow_dispatch:
-    inputs:
-      commit_sha:
-        description: Check status of commit sha to be updated
-        required: true
-        type: string
-jobs: 
-  check2:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Generate token
-        id: generate_token
-        uses: tibdex/github-app-token@v1.8.0
-        with:
-          app_id: ${{ secrets.CLEVERTAP_PLATFORM_BOT_ID }}
-          private_key: ${{ secrets.CLEVERTAP_PLATFORM_BOT_PRIVATE_ACCESS_KEY }}
-      - name: Create Check2 status
-        run: |
-          curl -L \
-          -X POST \
-          -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" \
-          -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/check-runs \
-          -d "{\"name\":\"check2\",\"head_sha\":\"${{ inputs.commit_sha }}\",\"status\":\"completed\",\"conclusion\":\"success\"}"
+# name: check2updater
+# run-name: ${{ github.head_ref || github.ref_name }}-${{ github.run_number }} 
+# on:
+#   workflow_dispatch:
+#     inputs:
+#       commit_sha:
+#         description: Check status of commit sha to be updated
+#         required: true
+#         type: string
+# jobs: 
+#   check2:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Generate token
+#         id: generate_token
+#         uses: tibdex/github-app-token@v1.8.0
+#         with:
+#           app_id: ${{ secrets.CLEVERTAP_PLATFORM_BOT_ID }}
+#           private_key: ${{ secrets.CLEVERTAP_PLATFORM_BOT_PRIVATE_ACCESS_KEY }}
+#       - name: Create Check2 status
+#         run: |
+#           curl -L \
+#           -X POST \
+#           -H "Accept: application/vnd.github+json" \
+#           -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" \
+#           -H "X-GitHub-Api-Version: 2022-11-28" \
+#           https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/check-runs \
+#           -d "{\"name\":\"check2\",\"head_sha\":\"${{ inputs.commit_sha }}\",\"status\":\"completed\",\"conclusion\":\"success\"}"
