--- a/.github/workflows/combinedstatus.yml
+++ b/.github/workflows/combinedstatus.yml
@@ -1,34 +1,34 @@
-name: combinedstatus
-run-name: ${{ github.head_ref || github.ref_name }}-${{ github.run_number }} 
-on:
-  pull_request:
-    types:
-      [opened, synchronize, reopened]
-jobs: 
-  combinedcheckstatus:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Generate token
-        id: generate_token
-        uses: tibdex/github-app-token@v1.8.0
-        with:
-          app_id: ${{ secrets.CLEVERTAP_PLATFORM_BOT_ID }}
-          private_key: ${{ secrets.CLEVERTAP_PLATFORM_BOT_PRIVATE_ACCESS_KEY }}
-      - name: Get Combined Check status
-        run: |
-          status1="success"
-          status2="failure"
-          status3="pending"
-          conclusions=""
-          while true;
-          do 
-            conclusions=$(curl  -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" -H "X-GitHub-Api-Version: 2022-11-28" \
-                          https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/commits/${{ github.sha }}/check-suites | jq -r '.check_suites | .[0] |  .conclusion' )
-            echo "$conclusions"
-            if [ "$conclusions" == "$status1" ]; then
-              exit 0
-            elif [ "$conclusions" == "$status2" ]; then
-              exit 1
-            fi
-            sleep 30
-          done
+# name: combinedstatus
+# run-name: ${{ github.head_ref || github.ref_name }}-${{ github.run_number }} 
+# on:
+#   pull_request:
+#     types:
+#       [opened, synchronize, reopened]
+# jobs: 
+#   combinedcheckstatus:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Generate token
+#         id: generate_token
+#         uses: tibdex/github-app-token@v1.8.0
+#         with:
+#           app_id: ${{ secrets.CLEVERTAP_PLATFORM_BOT_ID }}
+#           private_key: ${{ secrets.CLEVERTAP_PLATFORM_BOT_PRIVATE_ACCESS_KEY }}
+#       - name: Get Combined Check status
+#         run: |
+#           status1="success"
+#           status2="failure"
+#           status3="pending"
+#           conclusions=""
+#           while true;
+#           do 
+#             conclusions=$(curl  -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" -H "X-GitHub-Api-Version: 2022-11-28" \
+#                           https://api.github.com/repos/Yashprime1/genzinfra-cloudformation/commits/${{ github.sha }}/check-suites | jq -r '.check_suites | .[0] |  .conclusion' )
+#             echo "$conclusions"
+#             if [ "$conclusions" == "$status1" ]; then
+#               exit 0
+#             elif [ "$conclusions" == "$status2" ]; then
+#               exit 1
+#             fi
+#             sleep 30
+#           done
